--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -11,6 +11,7 @@
     justify-content: start;
     align-items: center;
     
+    
   }
 
   
@@ -21,7 +22,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    top: px;
+    top: 0;
     left: 0;
     transition: 850ms;
   }
@@ -38,6 +39,7 @@
   font-size: 30px;
 }
   .nav-text {
+    
     display: flex;
     justify-content: start;
     align-items: center;
